Preloaded values for OSSEC Server

--- a/etc/preloaded-vars.conf
+++ b/etc/preloaded-vars.conf
@@ -16,13 +16,13 @@
 # It can be "en", "br", "tr", "it", "de" or "pl".
 # In case of an invalid language, it will default
 # to English "en" 
-#USER_LANGUAGE="en"     # For english
+USER_LANGUAGE="en"     # For english
 #USER_LANGUAGE="br"     # For portuguese
 
 
 # If USER_NO_STOP is set to anything, the confirmation
 # messages are not going to be asked.
-#USER_NO_STOP="y"
+USER_NO_STOP="y"
 
 
 # USER_INSTALL_TYPE defines the installation type to
@@ -30,16 +30,16 @@
 # "agent" or "server".
 #USER_INSTALL_TYPE="local"
 #USER_INSTALL_TYPE="agent"
-#USER_INSTALL_TYPE="server"
+USER_INSTALL_TYPE="server"
 
 
 # USER_DIR defines the location to install ossec
-#USER_DIR="/var/ossec"
+USER_DIR="/var/ossec"
 
 
 # If USER_DELETE_DIR is set to "y", the directory
 # to install OSSEC will be removed if present.
-#USER_DELETE_DIR="y"
+USER_DELETE_DIR="y"
 
 
 # If USER_ENABLE_ACTIVE_RESPONSE is set to "n",
@@ -61,7 +61,7 @@
 
 # If USER_UPDATE is set to anything, the update
 # installation will be done.
-#USER_UPDATE="y"
+USER_UPDATE="y"
 
 # If USER_UPDATE_RULES is set to anything, the
 # rules will also be updated.
@@ -93,7 +93,7 @@
 ### Server/Local Installation variables. ###
 
 # USER_ENABLE_EMAIL enables or disables email alerting.
-#USER_ENABLE_EMAIL="y"
+USER_ENABLE_EMAIL="n"
 
 # USER_EMAIL_ADDRESS defines the destination e-mail of the alerts.
 #USER_EMAIL_ADDRESS="dcid@test.ossec.net"
@@ -103,7 +103,7 @@
 
 
 # USER_ENABLE_SYSLOG enables or disables remote syslog.
-#USER_ENABLE_SYSLOG="y"
+USER_ENABLE_SYSLOG="y"
 
 
 # USER_ENABLE_FIREWALL_RESPONSE enables or disables
