--- a/etc/preloaded-vars.conf
+++ b/etc/preloaded-vars.conf
@@ -22,7 +22,7 @@ USER_LANGUAGE="en"     # For english
 
 # If USER_NO_STOP is set to anything, the confirmation
 # messages are not going to be asked.
-USER_NO_STOP="y"
+USER_NO_STOP="x"
 
 
 # USER_INSTALL_TYPE defines the installation type to
@@ -34,7 +34,7 @@ USER_INSTALL_TYPE="server"
 
 
 # USER_DIR defines the location to install ossec
-USER_DIR="/var/ossec"
+USER_DIR="/srv/ossec"
 
 
 # If USER_DELETE_DIR is set to "y", the directory
@@ -44,19 +44,19 @@ USER_DELETE_DIR="y"
 
 # If USER_ENABLE_ACTIVE_RESPONSE is set to "n",
 # active response will be disabled.
-#USER_ENABLE_ACTIVE_RESPONSE="y"
+USER_ENABLE_ACTIVE_RESPONSE="y"
 
 
 # If USER_ENABLE_SYSCHECK is set to "y", 
 # syscheck will be enabled. Set to "n" to
 # disable it.
-#USER_ENABLE_SYSCHECK="y"
+USER_ENABLE_SYSCHECK="n"
 
 
 # If USER_ENABLE_ROOTCHECK is set to "y",
 # rootcheck will be enabled. Set to "n" to
 # disable it.
-#USER_ENABLE_ROOTCHECK="y"
+USER_ENABLE_ROOTCHECK="n"
 
 
 # If USER_UPDATE is set to anything, the update
@@ -65,7 +65,7 @@ USER_UPDATE="y"
 
 # If USER_UPDATE_RULES is set to anything, the
 # rules will also be updated.
-#USER_UPDATE_RULES="y"
+USER_UPDATE_RULES="y"
 
 # If USER_BINARYINSTALL is set, the installation
 # is not going to compile the code, but use the
@@ -108,7 +108,7 @@ USER_ENABLE_SYSLOG="y"
 
 # USER_ENABLE_FIREWALL_RESPONSE enables or disables
 # the firewall response.
-#USER_ENABLE_FIREWALL_RESPONSE="y"
+USER_ENABLE_FIREWALL_RESPONSE="y"
 
 
 # Enable PF firewall (OpenBSD, FreeBSD and Darwin only)
@@ -121,7 +121,7 @@ USER_ENABLE_SYSLOG="y"
 
 # USER_WHITE_LIST is a list of IPs or networks
 # that are going to be set to never be blocked.
-#USER_WHITE_LIST="192.168.2.1 192.168.1.0/24"
+USER_WHITE_LIST="192.168.126.10"
 
 
 #### exit ? ###
